# credit-scoring

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  infer.py  inference_example.json  pyproject.toml  run.sh  train.py
.dvc/: config
config/: config.yaml
credit_scoring/: base_model.py  config.py  hyper_config.py  hyper_optimizer.py  infer.py  preprocessing.py  train.py  utils.py
data/: X_test.csv.dvc  train.csv.dvc
