[tool.poetry]
name = "credit-scoring"
version = "0.1.0"
description = ""
authors = ["georgy.demin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
lightgbm = "^4.0.0"
scikit-learn = "^1.3.0"
fire = "^0.5.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "~3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.pylint.format]
max-line-length = "80"
